# calendesk-mcp-server

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
calendesk_mcp/: __init__.py  server.py
